@@ -24,6 +24,9 @@
 
 package au.edu.qut.yawl.editor.specification;
 
+import java.awt.Cursor;
+
+import au.edu.qut.yawl.editor.YAWLEditor;
 import au.edu.qut.yawl.editor.swing.JStatusBar;
 import au.edu.qut.yawl.editor.thirdparty.engine.YAWLEngineProxy;
 
@@ -112,6 +115,10 @@ public class ArchivingThread extends Thread {
     if (request == NOTHING) {
       return;
     }
+    
+    Cursor oldCursor = YAWLEditor.getInstance().getCursor();
+    YAWLEditor.getInstance().setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
+    
     SpecificationFileModel.getInstance().busy();
     switch (request) {
       case CLOSE: {
@@ -157,5 +164,7 @@ public class ArchivingThread extends Thread {
     }
     request = NOTHING;
     SpecificationFileModel.getInstance().notBusy();
+    YAWLEditor.getInstance().setCursor(oldCursor);
+
   }
 }
